load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "httpapi.go",
        "kvs_handler.go",
    ],
    importpath = "github.com/getumen/doctrine/phalanx/examples/leveldbkvs",
    visibility = ["//visibility:public"],
    deps = [
        "//phalanx:go_default_library",
        "//phalanx/phalanxpb:go_default_library",
        "@com_github_coreos_etcd//raft/raftpb:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["httpapi_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//phalanx:go_default_library",
        "//phalanx/stablestore/leveldb:go_default_library",
        "@com_github_coreos_etcd//raft/raftpb:go_default_library",
        "@org_golang_x_xerrors//:go_default_library",
    ],
)
